--- a/apps/website/src/pages/docs/core/upgrading-to-v2.mdx
+++ b/apps/website/src/pages/docs/core/upgrading-to-v2.mdx
@@ -23,7 +23,28 @@ npm i @chakra-ui/react@latest
 npm i @saas-ui/react@next
 ```
 
-### 3. New components
+### 3. Next.js
+
+The linkComponent no longer requires legacyBehavior. You can pass the Link component to SaasProvider as following:
+
+```tsx
+import Link, { LinkProps } from 'next/link'
+import { SaasProvider } from '@saas-ui/react'
+
+const NextLink = React.forwardRef<HTMLAnchorElement, LinkProps>(
+  (props, ref) => <Link ref={ref} {...props} />
+)
+
+function MyApp({ Component, pageProps }) {
+  return (
+    <SaasProvider linkComponent={Link}>
+      <Component {...pageProps} />
+    </SaasProvider>
+  )
+}
+```
+
+### 4. New components
 
 #### Timeline
 
@@ -136,6 +157,106 @@ export const Form = createForm({
 })
 ```
 
+#### StepForm
+
+`StepForm` has a new improved API, similar to `Form`.
+
+```tsx
+import {StepForm} from '@saas-ui/react'
+
+// zod
+// import { StepForm } from '@saas-ui/forms/zod'
+
+// yup
+// import { StepForm } from '@saas-ui/forms/yup'
+
+export default function MyStepForm = () => {
+  return (
+    <StepForm
+      defaultValues={{
+        name: '',
+        email: '',
+        password: '',
+      }}
+      onSubmit={onSubmit}
+    >
+      {({ Field, FormStep }) => (
+        <FormLayout>
+          <FormStep name="profile">
+            <FormLayout>
+              <Field name="name" label="Name" rules={{ required: true }} />
+              <Field name="email" label="Email" rules={{ required: true }} />
+              <NextButton />
+            </FormLayout>
+          </FormStep>
+          <FormStep name="password">
+            <FormLayout>
+              <Field
+                name="password"
+                label="Password"
+                rules={{ required: true, minLength: 4 }}
+              />
+              <NextButton />
+            </FormLayout>
+          </FormStep>
+        </FormLayout>
+      )}
+    </StepForm>
+  )
+}
+```
+
+Zod and Yup forms now expect a `steps` property that contains the schemas for each step.
+
+```tsx
+export default function MyStepForm = () => {
+  return (
+    <StepForm
+      steps={[{
+        name: 'profile',
+        schema: z.object({
+          name: z.string(),
+          email: z.string().email(),
+        })
+      }, {
+        name: 'password',
+        schema: z.object({
+          password: z.string().min(4),
+        })
+      }]}
+      defaultValues={{
+        name: '',
+        email: '',
+        password: '',
+      }}
+      onSubmit={onSubmit}
+    >
+      {({ Field, FormStep }) => (
+        <FormLayout>
+          <FormStep name="profile">
+            <FormLayout>
+              <Field name="name" label="Name" rules={{ required: true }} />
+              <Field name="email" label="Email" rules={{ required: true }} />
+              <NextButton />
+            </FormLayout>
+          </FormStep>
+          <FormStep name="password">
+            <FormLayout>
+              <Field
+                name="password"
+                label="Password"
+                rules={{ required: true, minLength: 4 }}
+              />
+              <NextButton />
+            </FormLayout>
+          </FormStep>
+        </FormLayout>
+      )}
+    </StepForm>
+  )
+}
+```
+
 #### Loader
 
 `Loader` has been renamed to `LoadingOverlay` and has a new improved API.
@@ -154,3 +275,13 @@ The `condensed` variant has been renamed to `compact`.
 #### ErrorBoundary
 
 ErrorBoundary `errorComponent` property renamed to `fallback` to be consistent with Suspense.
+
+#### Divider
+
+`Divider` has a new `DividerLabel` component that can be used to render a label inside the divider.
+
+```tsx
+<Divider>
+  <DividerLabel>OR</DividerLabel>
+</Divider>
+```
