chore: update remote sort example

--- a/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
@@ -375,6 +375,9 @@ export default function ListPage() {
           initialState={{
             pageSize: 1,
           }}
+          state={{
+            sort,
+          }}
         >
           <DataGridPagination
             onChange={({ pageIndex }) => setPage(pageIndex)}
